correct nesting in container-2 index.html file and correct alignment in style.css file

--- a/style.css
+++ b/style.css
@@ -84,26 +84,20 @@ a {
     padding-left: 125px;
 }
 
-.container-2 {
-    background-color: #f9faf8;
-    display: flex;
-    flex-direction: column;
-}
-
 .info-header {
     font-size: 36px;
     font-weight: 900;
+    text-align: center;
+}
+
+.container-2 {
     display: flex;
     justify-content: center;
 }
 
-.squares {
-    display: flex;
-}
-
 .square {
     border:4px solid #3882f6;
-    border-radius: 4px;
-    width: 50px;
-    height: 50px;
+    border-radius: 8px;
+    width: 200px;
+    height: 200px;
 }
